fix x-overflow on user table

--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -33,7 +33,12 @@
         }
     }
     &-table {
-        overflow-x: auto;
+        @include screen-size(desktop-only){
+            overflow-x: auto;
+        }
+        @include screen-size(desktop-plus){
+            overflow-x: auto;
+        }
     }
     &-sidebar {
         width: 20%;
